cmake_minimum_required(VERSION 3.17)
project(asynclienthttp)

set(CMAKE_CXX_STANDARD 17)
set(Boost_INCLUDE_DIR /home/daniela/Scaricati/boost_1_74_0)
set(Boost_LIBRARY_DIR /home/daniela/Scaricati/boost_1_74_0/stage/lib)
find_package(Boost COMPONENTS system filesystem REQUIRED)
include_directories(${Boost_INCLUDE_DIR})
add_executable(asynclienthttp main.cpp FileWatcher.h mime_types.cpp mime_types.h crypto.cpp crypto.h)
target_link_libraries(asynclienthttp ${Boost_LIBRARIES} -lpthread -lboost_thread -lboost_system )
target_link_libraries(asynclienthttp stdc++fs)
find_package(PkgConfig REQUIRED)
pkg_search_module(OPENSSL REQUIRED openssl)
if( OPENSSL_FOUND )
    include_directories(${OPENSSL_INCLUDE_DIRS})
    message(STATUS "Using OpenSSL ${OPENSSL_VERSION}")
else()
    # Error; with REQUIRED, pkg_search_module() will throw an error by it's ow
endif()
target_link_libraries(asynclienthttp ${OPENSSL_LIBRARIES} -lssl -lcrypto)